Fixed white bar bug on safari

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -579,7 +579,7 @@ footer i:hover {
 }
 
 .short-link {
-    color: var(--clr-cyan);
+    color: var(--clr-dark-violet);
     width: 100%;
 }
 
